# CV

./: .coverage  .gitignore  CLAUDE.md  CV.sty  CV.tex  README.md  build.py  cv-schema.json  cv.json  example.tex  giorgio-caizzi.tex  latex_requirements.txt  preamble.tex  pyproject.toml  requirements.txt
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  test.yml  tex-build.yml
cv_builder/: __init__.py  cli.py  core.py  jsonresume.py  schema.json
cv_builder/templates/resume/: resume.sty  schema.json  template.tex.j2
data/: cv.json  cv.jsonresume.json  resume.tex
data/resume/: data.json  resume.json  resume.tex
output/resume/: resume.tex
templates/resume/: data.json  resume.sty  resume.tex  schema.json  template.tex.j2
tests/: conftest.py  test_cli.py  test_core.py  test_integration.py  test_jsonresume.py
