[project]
name = "cv-builder"
version = "2.0.0"
description = "JSON-driven LaTeX CV with Jinja2 templating"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.0",
    "jsonschema>=4.0",
]

[project.scripts]
cv-build = "cv_builder.cli:main"

[tool.poetry]
include = [
    { path = "cv_builder/templates/**/*", format = ["sdist", "wheel"] }
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"
