[project]
name = "cv-builder"
version = "2.2.0"
description = "JSON-driven LaTeX CV with Jinja2 templating"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "jinja2>=3.0",
    "jsonschema>=4.0",
]

[project.scripts]
cv-build = "cv_builder.cli:main"

[tool.poetry]
include = [
    { path = "cv_builder/templates/**/*", format = ["sdist", "wheel"] }
]

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated, mocked dependencies)",
    "integration: Integration tests (real file I/O, no LaTeX compilation)",
]
addopts = "-v"
